--- a/AngularShop/src/assets/i18n/de.json
+++ b/AngularShop/src/assets/i18n/de.json
@@ -6,15 +6,19 @@
     "LOGIN": "Anmelden",
     "LOGOUT": "Abmelden",
     "PROFIL": "Profil",
-    "ADMIN": "Admin",
     "SEARCH": "Suchen",
     "SEARCH RESULT": "Suchergebnisse",
     "SEARCH FOR PRODUCTS": "Suche nach Produkten",
     "PREVIOUS": "Zurück",
     "NEXT": "Weiter",
     "CATEGORIES": "Kategorien",
-    "PRODUCT CATEGORY": "Warenklasse",
-    "PRODUCT SUBCATEGORY": "Warengruppe",
+    "PRODUCT CATEGORY": "Warenkategorie",
+    "PRODUCT SUBCATEGORY": "Unterkategorie",
+    "SHOP DESCRIPTION0": "SHOP DESCRIPTION0",
+    "SHOP DESCRIPTION1": "SHOP DESCRIPTION1",
+    "SHOP DESCRIPTION2": "SHOP DESCRIPTION2",
+    "SHOP DESCRIPTION3": "SHOP DESCRIPTION3",
+    "SHOP DESCRIPTION4": "SHOP DESCRIPTION4",
     "DISCOVER MORE": "Mehr entdecken",
     "ORDER HISTORY": "Bestellverlauf",
     "ORDER NUMBER": "Bestellnummer",
@@ -91,9 +95,9 @@
     "FILTERS": "Filter",
     "BRANDS": "Marken",
     "APPLY FILTERS": "Filter anwenden",
-    "LOGIN WITH OAUTH": "Mit OAuth2 anmelden",
+    "LOGIN WITH OAUTH": "Login",
     "REGISTER": "Registrieren",
-    "REGISTER WITH OAUTH": "Mit OAuth2 registrieren",
+    "REGISTER TO OAUTH": "Registrieren",
     "CURRENT USER": "Aktueller Benutzer:",
     "WARNING": "Warnung!",
     "REMOVE ITEM MESSAGE": "Sind Sie sicher, dass Sie diesen Artikel aus Ihrem Warenkorb entfernen möchten?",
@@ -109,5 +113,5 @@
     "ADMIN MENU": "Admin-Menü",
     "SEARCH CUSTOMER": "Kunden suchen",
     "SEARCH BY USERNAME": "Suche nach Benutzername",
-    "DARKMODE" : "Nachtmodus"
+    "DARKMODE" : "Nachtmodus",
 }
