--- a/AngularShop/src/assets/i18n/en.json
+++ b/AngularShop/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
     "PACKAGING SIZE": "Packaging Size",
     "STOCK": "Stock",
     "PRICE PER UNIT": "Price per Unit",
+	"PRICE":"price",
     "CHOOSE QUANTITY TYPE": "Choose Quantity Type",
     "UNIT": "Unit",
     "CARTON": "Carton",
@@ -93,7 +94,9 @@
     "FAVORITES": "Favorites",
     "PRODUCT DETAILS": "Product Details",
     "FILTERS": "Filters",
+	"PRODUCT FILTER": "Product Filter",
     "BRANDS": "Brands",
+	"SORT BY": "Sort by",
     "APPLY FILTERS": "Apply Filters",
     "LOGIN WITH OAUTH": "Login with OAuth",
     "REGISTER": "Register",
