--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -83,6 +83,7 @@
     "PACKAGING SIZE": "Taille de l'Emballage",
     "STOCK": "Stock",
     "PRICE PER UNIT": "Prix par Unité",
+	"PRICE": "Prix",
     "CHOOSE QUANTITY TYPE": "Choisissez le Type de Quantité",
     "UNIT": "Unité",
     "CARTON": "Carton",
@@ -93,8 +94,10 @@
     "FAVORITES": "Favoris",
     "PRODUCT DETAILS": "Détails du Produit",
     "FILTERS": "Filtres",
+	"PRODUCT FILTER": "Filtre de Produit",
     "BRANDS": "Marques",
     "APPLY FILTERS": "Appliquer les Filtres",
+	"SORT BY": "Trier par",
     "LOGIN WITH OAUTH": "Connexion avec OAuth",
     "REGISTER": "S'Inscrire",
     "REGISTER TO OAUTH": "S'Inscrire avec OAuth",
