--- a/AngularShop/src/assets/i18n/vn.json
+++ b/AngularShop/src/assets/i18n/vn.json
@@ -83,6 +83,7 @@
     "PACKAGING SIZE": "Kích thước đóng gói",
     "STOCK": "Tồn kho",
     "PRICE PER UNIT": "Giá mỗi đơn vị",
+	"PRICE": "Giá",
     "CHOOSE QUANTITY TYPE": "Chọn loại số lượng",
     "UNIT": "Đơn vị",
     "CARTON": "Thùng",
@@ -93,8 +94,10 @@
     "FAVORITES": "Mục yêu thích",
     "PRODUCT DETAILS": "Chi tiết sản phẩm",
     "FILTERS": "Bộ lọc",
+	"PRODUCT FILTER": "Bộ lọc sản phẩm",
     "BRANDS": "Thương hiệu",
     "APPLY FILTERS": "Áp dụng bộ lọc",
+	"SORT BY": "Sắp xếp theo",
     "LOGIN WITH OAUTH": "Đăng nhập bằng OAuth",
     "REGISTER": "Đăng ký",
     "REGISTER TO OAUTH": "Đăng ký bằng OAuth",
