--- a/AngularShop/src/assets/i18n/zh.json
+++ b/AngularShop/src/assets/i18n/zh.json
@@ -83,6 +83,7 @@
     "PACKAGING SIZE": "包装尺寸",
     "STOCK": "库存",
     "PRICE PER UNIT": "单位价格",
+	"PRICE": "价格",
     "CHOOSE QUANTITY TYPE": "选择数量类型",
     "UNIT": "单元",
     "CARTON": "纸箱",
@@ -93,8 +94,10 @@
     "FAVOURITES": "收藏夹",
     "PRODUCT DETAILS": "产品详情",
     "FILTERS": "筛选",
+	"PRODUCT FILTER": "产品筛选",
     "BRANDS": "品牌",
     "APPLY FILTERS": "应用筛选",
+	"SORT BY": "排序方式",
     "LOGIN WITH OAUTH": "使用OAuth登录",
     "REGISTER": "注册",
     "REGISTER TO OAUTH": "使用OAuth注册",
