update translation and profil page

--- a/AngularShop/src/assets/i18n/de.json
+++ b/AngularShop/src/assets/i18n/de.json
@@ -5,7 +5,7 @@
     "CART": "Warenkorb",
     "LOGIN": "Anmelden",
     "LOGOUT": "Abmelden",
-    "PROFIL": "Profil",
+    "PROFILE": "Profil",
     "SEARCH": "Suchen",
     "SEARCH RESULT": "Suchergebnisse",
     "SEARCH FOR PRODUCTS": "Suche nach Produkten",
@@ -26,7 +26,8 @@
     "ORDER DATE": "Bestelldatum",
     "CART REPLACEMENT MESSAGE": "Der Einkaufswagen wird ersetzt. Möchten Sie fortfahren?",
     "DATE": "Datum",
-    "PROFIL EDIT": "Profil bearbeiten",
+    "PROFILE EDIT": "Profil bearbeiten",
+	"PROFILE SETTINGS": "Profileinstellungen",
     "CONTACT": "Kontakt",
     "LEGAL NOTICES": "Rechtliche Hinweise",
     "TERMNS AND CONDITION": "AGB",
