--- a/AngularShop/src/assets/i18n/en.json
+++ b/AngularShop/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
     "CART REPLACEMENT MESSAGE": "The shopping cart is being replaced. Do you want to continue?",
     "DATE": "Date",
     "PROFILE EDIT": "Edit Profile",
+	"PROFILE SETTINGS":"Profile Settings",
     "CONTACT": "Contact",
     "LEGAL NOTICES": "Legal Notices",
     "TERMS AND CONDITIONS": "Terms and Conditions",
