--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -27,6 +27,7 @@
     "CART REPLACEMENT MESSAGE": "Le panier d'achat est en cours de remplacement. Voulez-vous continuer ?",
     "DATE": "Date",
     "PROFILE EDIT": "Modifier le Profil",
+	"PROFILE SETTINGS": "Paramètres de Profil",
     "CONTACT": "Contact",
     "LEGAL NOTICES": "Mentions Légales",
     "TERMS AND CONDITIONS": "Conditions Générales",
