--- a/AngularShop/src/assets/i18n/vn.json
+++ b/AngularShop/src/assets/i18n/vn.json
@@ -27,6 +27,7 @@
     "CART REPLACEMENT MESSAGE": "Giỏ hàng đang được thay thế. Bạn có muốn tiếp tục không?",
     "DATE": "Ngày",
     "PROFILE EDIT": "Chỉnh sửa hồ sơ",
+	"PROFILE SETTINGS": "Cài đặt Hồ sơ",
     "CONTACT": "Liên hệ",
     "LEGAL NOTICES": "Thông báo pháp lý",
     "TERMS AND CONDITIONS": "Điều khoản và điều kiện",
