--- a/AngularShop/src/assets/i18n/zh.json
+++ b/AngularShop/src/assets/i18n/zh.json
@@ -27,6 +27,7 @@
     "CART REPLACEMENT MESSAGE": "购物车正在替换中。您要继续吗？",
     "DATE": "日期",
     "PROFILE EDIT": "编辑个人资料",
+	"PROFILE SETTINGS": "个人资料设置",
     "CONTACT": "联系方式",
     "LEGAL NOTICES": "法律声明",
     "TERMS AND CONDITIONS": "条款和条件",
