update admin section

--- a/AngularShop/src/assets/i18n/de.json
+++ b/AngularShop/src/assets/i18n/de.json
@@ -6,6 +6,7 @@
     "LOGIN": "Anmelden",
     "LOGOUT": "Abmelden",
     "PROFILE": "Profil",
+	"ADMIN": "Admin",
     "SEARCH": "Suchen",
     "SEARCH RESULT": "Suchergebnisse",
     "SEARCH FOR PRODUCTS": "Suche nach Produkten",
@@ -28,7 +29,11 @@
     "DATE": "Datum",
     "PROFILE EDIT": "Profil bearbeiten",
 	"PROFILE SETTINGS": "Profileinstellungen",
+	"PROFILE INFORMATION": "Profilinformationen",
+	"PERSONAL INFORMATION": "Persönliche Informationen",
     "CONTACT": "Kontakt",
+	"BILLING ADDRESS": "Rechnungsadresse",
+	"DELIVERY ADDRESS": "Lieferadresse",
     "LEGAL NOTICES": "Rechtliche Hinweise",
     "TERMNS AND CONDITION": "AGB",
     "IMPRINT": "Impressum",
@@ -68,8 +73,11 @@
     "EMAIL ADDRESS": "E-Mail-Adresse",
     "PHONE": "Telefon",
     "ADDRESS": "Adresse",
-    "CITY": "Ort",
+    "CITY": "Stadt",
     "ZIP CODE": "Postleitzahl",
+	"STATE": "Ort",
+	"COUNTRY": "Land",
+	"SAME AS BILLING ADDRESS": "Gleich wie Rechnungsadresse",
     "DELIVERY DATE": "Lieferdatum",
     "COMMENT": "Kommentar",
     "MAXIMUM CHARACTERS": "Maximal 1000 Zeichen",
