--- a/AngularShop/src/assets/i18n/en.json
+++ b/AngularShop/src/assets/i18n/en.json
@@ -28,7 +28,11 @@
     "DATE": "Date",
     "PROFILE EDIT": "Edit Profile",
 	"PROFILE SETTINGS":"Profile Settings",
+	"PROFILE INFORMATION": "Profile Information",
+	"PERSONAL INFORMATION":"Personal Information",
     "CONTACT": "Contact",
+	"BILLING ADDRESS":"Billing Address",
+	"DELIVERY ADDRESS":"Delivery Address",
     "LEGAL NOTICES": "Legal Notices",
     "TERMS AND CONDITIONS": "Terms and Conditions",
     "IMPRINT": "Imprint",
@@ -70,6 +74,9 @@
     "ADDRESS": "Address",
     "CITY": "City",
     "ZIP CODE": "Zip Code",
+	"STATE":"State",
+	"COUNTRY":"Country",
+	"SAME AS BILLING ADDRESS":"Same as billing address",
     "DELIVERY DATE": "Delivery Date",
     "COMMENT": "Comment",
     "MAXIMUM CHARACTERS": "Maximum 1000 Characters",
