--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -6,6 +6,7 @@
     "LOGIN": "Se Connecter",
     "LOGOUT": "Se Déconnecter",
     "PROFILE": "Profil",
+	"ADMIN": "Admin",
     "SEARCH": "Rechercher",
     "SEARCH RESULT": "Résultats de la Recherche",
     "SEARCH FOR PRODUCTS": "Rechercher des Produits",
@@ -28,7 +29,11 @@
     "DATE": "Date",
     "PROFILE EDIT": "Modifier le Profil",
 	"PROFILE SETTINGS": "Paramètres de Profil",
+	"PROFILE INFORMATION": "Informations du Profil",
+	"PERSONAL INFORMATION": "Informations Personnelles",
     "CONTACT": "Contact",
+	"BILLING ADDRESS": "Adresse de Facturation",
+	"DELIVERY ADDRESS": "Adresse de Livraison",
     "LEGAL NOTICES": "Mentions Légales",
     "TERMS AND CONDITIONS": "Conditions Générales",
     "IMPRINT": "Mentions Légales",
@@ -70,6 +75,9 @@
     "ADDRESS": "Adresse",
     "CITY": "Ville",
     "ZIP CODE": "Code Postal",
+	"STATE": "État",
+	"COUNTRY": "Pays",
+	"SAME AS BILLING ADDRESS": "Identique à l'adresse de facturation",
     "DELIVERY DATE": "Date de Livraison",
     "COMMENT": "Commentaire",
     "MAXIMUM CHARACTERS": "Maximum 1000 Caractères",
