--- a/AngularShop/src/assets/i18n/zh.json
+++ b/AngularShop/src/assets/i18n/zh.json
@@ -6,6 +6,7 @@
     "LOGIN": "登录",
     "LOGOUT": "登出",
     "PROFILE": "个人资料",
+	"ADMIN": "管理员",
     "SEARCH": "搜索",
     "SEARCH RESULT": "搜索结果",
     "SEARCH FOR PRODUCTS": "搜索产品",
@@ -28,7 +29,11 @@
     "DATE": "日期",
     "PROFILE EDIT": "编辑个人资料",
 	"PROFILE SETTINGS": "个人资料设置",
+	"PROFILE INFORMATION": "个人资料信息",
+	"PERSONAL INFORMATION": "个人信息",
     "CONTACT": "联系方式",
+	"BILLING ADDRESS": "账单地址",
+	"DELIVERY ADDRESS": "送货地址",
     "LEGAL NOTICES": "法律声明",
     "TERMS AND CONDITIONS": "条款和条件",
     "IMPRINT": "版权声明",
@@ -70,6 +75,9 @@
     "ADDRESS": "地址",
     "CITY": "城市",
     "ZIP CODE": "邮政编码",
+	"STATE": "州",
+	"COUNTRY": "国家",
+	"SAME AS BILLING ADDRESS": "与账单地址相同",
     "DELIVERY DATE": "送货日期",
     "COMMENT": "备注",
     "MAXIMUM CHARACTERS": "最多1000个字符",
