--- a/AngularShop/src/assets/i18n/vn.json
+++ b/AngularShop/src/assets/i18n/vn.json
@@ -6,6 +6,7 @@
     "LOGIN": "Đăng nhập",
     "LOGOUT": "Đăng xuất",
     "PROFILE": "Hồ sơ",
+	"ADMIN": "Quản trị viên",
     "SEARCH": "Tìm kiếm",
     "SEARCH RESULT": "Kết quả tìm kiếm",
     "SEARCH FOR PRODUCTS": "Tìm kiếm sản phẩm",
@@ -28,7 +29,11 @@
     "DATE": "Ngày",
     "PROFILE EDIT": "Chỉnh sửa hồ sơ",
 	"PROFILE SETTINGS": "Cài đặt Hồ sơ",
+	"PROFILE INFORMATION": "Thông tin Hồ sơ",
+	"PERSONAL INFORMATION": "Thông tin Cá nhân",
     "CONTACT": "Liên hệ",
+	"BILLING ADDRESS": "Địa chỉ thanh toán",
+	"DELIVERY ADDRESS": "Địa chỉ giao hàng",
     "LEGAL NOTICES": "Thông báo pháp lý",
     "TERMS AND CONDITIONS": "Điều khoản và điều kiện",
     "IMPRINT": "In ấn",
@@ -70,6 +75,9 @@
     "ADDRESS": "Địa chỉ",
     "CITY": "Thành phố",
     "ZIP CODE": "Mã bưu điện",
+	"STATE": "Tiểu bang",
+	"COUNTRY": "Quốc gia",
+	"SAME AS BILLING ADDRESS": "Giống như địa chỉ thanh toán",
     "DELIVERY DATE": "Ngày giao hàng",
     "COMMENT": "Bình luận",
     "MAXIMUM CHARACTERS": "Tối đa 1000 ký tự",
