--- a/AngularShop/src/assets/i18n/en.json
+++ b/AngularShop/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "LOGIN": "Log In",
     "LOGOUT": "Log Out",
     "PROFILE": "Profile",
+	"ADMIN": "Admin",
     "SEARCH": "Search",
     "SEARCH RESULT": "Search Results",
     "SEARCH FOR PRODUCTS": "Search for Products",
