--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -65,7 +65,7 @@
     "ORDER CONFIRMED": "Commande Confirmée !",
     "ORDER CONFIRMATION MESSAGE": "Merci pour votre commande ! Un email de confirmation vous sera envoyé sous peu !",
     "PLEASE WAIT": "Veuillez Patienter...",
-    "COMPANY": "Société",
+    "COMPANY": "Entreprise",
     "FIRSTNAME": "Prénom",
     "LASTNAME": "Nom de Famille",
     "STREET": "Rue",
