--- a/AngularShop/src/assets/i18n/de.json
+++ b/AngularShop/src/assets/i18n/de.json
@@ -38,6 +38,9 @@
     "STORE OPENING HOURS": "Öffnungszeiten Laden",
     "RESTAURANT OPENING HOURS": "Öffnungszeiten Restaurant",
     "MONDAY": "Montag",
+    "TUESDAY": "Dienstag",
+    "WEDNESDAY": "Mittwoch",
+    "THURSDAY": "Donnerstag",
     "FRIDAY": "Freitag",
     "SATURDAY": "Samstag",
     "SUNDAY": "Sonntag",
