--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -38,6 +38,9 @@
     "STORE OPENING HOURS": "Heures d'Ouverture du Magasin",
     "RESTAURANT OPENING HOURS": "Heures d'Ouverture du Restaurant",
     "MONDAY": "Lundi",
+    "TUESDAY": "Mardi",
+    "WEDNESDAY": "Mercredi",
+    "THURSDAY": "Jeudi",
     "FRIDAY": "Vendredi",
     "SATURDAY": "Samedi",
     "SUNDAY": "Dimanche",
