--- a/AngularShop/src/assets/i18n/vn.json
+++ b/AngularShop/src/assets/i18n/vn.json
@@ -38,6 +38,9 @@
     "STORE OPENING HOURS": "Giờ mở cửa cửa hàng",
     "RESTAURANT OPENING HOURS": "Giờ mở cửa nhà hàng",
     "MONDAY": "Thứ Hai",
+    "TUESDAY": "Thứ Ba",
+    "WEDNESDAY": "Thứ Tư",
+    "THURSDAY": "Thứ Năm",
     "FRIDAY": "Thứ Sáu",
     "SATURDAY": "Thứ Bảy",
     "SUNDAY": "Chủ Nhật",
