--- a/AngularShop/src/assets/i18n/zh.json
+++ b/AngularShop/src/assets/i18n/zh.json
@@ -38,6 +38,9 @@
     "STORE OPENING HOURS": "店铺营业时间",
     "RESTAURANT OPENING HOURS": "餐厅营业时间",
     "MONDAY": "星期一",
+    "TUESDAY": "星期二",
+    "WEDNESDAY": "星期三",
+    "THURSDAY": "星期四",
     "FRIDAY": "星期五",
     "SATURDAY": "星期六",
     "SUNDAY": "星期日",
