--- a/AngularShop/src/assets/i18n/de.json
+++ b/AngularShop/src/assets/i18n/de.json
@@ -15,8 +15,8 @@
     "CATEGORIES": "Kategorien",
     "PRODUCT CATEGORY": "Warenkategorie",
     "PRODUCT SUBCATEGORY": "Unterkategorie",
-    "SHOP DESCRIPTION0": "SHOP DESCRIPTION0",
-    "SHOP DESCRIPTION1": "SHOP DESCRIPTION1",
+    "SHOP DESCRIPTION0": "Willkommen in unserem asiatischen Geschäft!",
+    "SHOP DESCRIPTION1": "Wir bieten eine breite Auswahl an Produkten aus ganz Asien, darunter Japan, China, Korea, Thailand und mehr. Unsere Regale sind mit authentischen und hochwertigen Zutaten, Snacks und Getränken gefüllt, die Sie auf die belebten Strassen und lebendigen Märkte Asiens bringen werden.<br><br>Ob Sie exotische Gewürze, frisches Gemüse oder einzigartige Snacks suchen, wir haben für jeden etwas dabei. Unsere freundlichen und sachkundigen Mitarbeiter sind immer bereit, Ihnen bei der Suche nach dem Gewünschten zu helfen und alle Fragen zu beantworten, die Sie haben. Wir bieten auch eine Auswahl an Kochbüchern und Rezeptideen, um Ihre kulinarischen Abenteuer zu inspirieren.<br><br>Neben unseren Lebensmittelprodukten führen wir auch eine Reihe von asiatisch inspirierten Haushaltswaren und Geschenken, darunter Geschirr, Dekor und Schönheitsprodukte. Entdecken Sie unseren Laden und erleben Sie das Beste aus Asien direkt hier in der Schweiz.<br><br>Besuchen Sie uns und erleben Sie die Sehenswürdigkeiten, Gerüche und Geschmacksrichtungen Asiens!",
     "DISCOVER MORE": "Mehr entdecken",
     "ORDER HISTORY": "Bestellverlauf",
     "ORDER NUMBER": "Bestellnummer",
