--- a/AngularShop/src/assets/i18n/en.json
+++ b/AngularShop/src/assets/i18n/en.json
@@ -15,8 +15,8 @@
     "CATEGORIES": "Categories",
     "PRODUCT CATEGORY": "Product Category",
     "PRODUCT SUBCATEGORY": "Product Subcategory",
-	"SHOP DESCRIPTION0": "SHOP DESCRIPTION0",
-    "SHOP DESCRIPTION1": "SHOP DESCRIPTION1",
+	"SHOP DESCRIPTION0": "Welcome to our Asian shop",
+    "SHOP DESCRIPTION1": "We offer a wide variety of products from all over Asia, including Japan, China, Korea, Thailand, and more. Our shelves are stocked with authentic and high-quality ingredients, snacks, and beverages that will transport you to the bustling streets and vibrant markets of Asia.<br><br>Whether you're looking for exotic spices, fresh produce, or unique snacks, we have something for everyone. Our friendly and knowledgeable staff are always ready to help you find what you need and answer any questions you may have. We also offer a selection of cookbooks and recipe ideas to inspire your culinary adventures.<br><br>In addition to our food products, we also carry a range of Asian-inspired home goods and gifts, including tableware, decor, and beauty products. Explore our shop and discover the best of Asia right here in Switzerland.<br><br>Come visit us and experience the sights, smells, and tastes of Asia!",
     "DISCOVER MORE": "Discover More",
     "ORDER HISTORY": "Order History",
     "ORDER NUMBER": "Order Number",
