--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -15,8 +15,8 @@
     "CATEGORIES": "Catégories",
     "PRODUCT CATEGORY": "Catégorie de Produits",
     "PRODUCT SUBCATEGORY": "Sous-catégorie de Produits",
-	"SHOP DESCRIPTION0": "SHOP DESCRIPTION0",
-    "SHOP DESCRIPTION1": "SHOP DESCRIPTION1",
+	"SHOP DESCRIPTION0": "Bienvenue dans notre magasin asiatique!",
+    "SHOP DESCRIPTION1": "Nous offrons une grande variété de produits de toute l'Asie, y compris le Japon, la Chine, la Corée, la Thaïlande et plus encore. Nos étagères sont remplies d'ingrédients, de collations et de boissons authentiques et de haute qualité qui vous transporteront dans les rues animées et les marchés vibrants d'Asie.<br><br>Que vous cherchiez des épices exotiques, des produits frais ou des collations uniques, nous avons quelque chose pour tout le monde. Notre personnel amical et compétent est toujours prêt à vous aider à trouver ce dont vous avez besoin et à répondre à toutes vos questions. Nous proposons également une sélection de livres de cuisine et d'idées de recettes pour inspirer vos aventures culinaires.<br><br>En plus de nos produits alimentaires, nous proposons également une gamme d'articles ménagers et de cadeaux inspirés de l'Asie, notamment de la vaisselle, de la décoration et des produits de beauté. Explorez notre magasin et découvrez le meilleur de l'Asie ici en Suisse.<br><br>Venez nous rendre visite et découvrez les sights, les odeurs et les goûts de l'Asie!",
     "DISCOVER MORE": "Découvrir Plus",
     "ORDER HISTORY": "Historique des Commandes",
     "ORDER NUMBER": "Numéro de Commande",
