--- a/AngularShop/src/assets/i18n/vn.json
+++ b/AngularShop/src/assets/i18n/vn.json
@@ -15,8 +15,8 @@
     "CATEGORIES": "Danh mục",
     "PRODUCT CATEGORY": "Danh mục sản phẩm",
     "PRODUCT SUBCATEGORY": "Danh mục con sản phẩm",
-	"SHOP DESCRIPTION0": "SHOP DESCRIPTION0",
-    "SHOP DESCRIPTION1": "SHOP DESCRIPTION1",
+	"SHOP DESCRIPTION0": "Chào mừng đến với cửa hàng Á Châu của chúng tôi tại Thụy Sĩ!",
+    "SHOP DESCRIPTION1": "Chúng tôi cung cấp một loạt các sản phẩm từ khắp châu Á, bao gồm Nhật Bản, Trung Quốc, Hàn Quốc, Thái Lan và nhiều hơn nữa. Kệ hàng của chúng tôi được cung cấp đầy đủ các thành phần, đồ ăn nhẹ và đồ uống chất lượng cao và độc đáo sẽ đưa bạn đến những con phố sầm uất và các chợ sôi động của châu Á.<br><br>Dù bạn đang tìm kiếm gia vị kỳ lạ, rau củ tươi hoặc các loại bánh ngọt độc đáo, chúng tôi đều có sản phẩm phù hợp với mọi sở thích của bạn. Đội ngũ nhân viên của chúng tôi thân thiện và am hiểu sẵn sàng giúp bạn tìm thấy những gì bạn cần và trả lời bất kỳ câu hỏi nào của bạn. Chúng tôi cũng cung cấp một số sách nấu ăn và ý tưởng món ăn để truyền cảm hứng cho các chuyến phiêu lưu ẩm thực của bạn.<br><br>Ngoài các sản phẩm thực phẩm, chúng tôi cũng cung cấp một loạt các sản phẩm gia dụng và quà tặng lấy cảm hứng từ châu Á, bao gồm đồ dùng bàn ăn, trang trí và sản phẩm làm đẹp. Khám phá cửa hàng của chúng tôi và khám phá những điều tuyệt vời nhất của châu Á ngay tại Thụy Sĩ.<br><br>Hãy đến thăm chúng tôi và trải nghiệm những cảnh quan, mùi hương và hương vị của châu Á!",
     "DISCOVER MORE": "Khám phá thêm",
     "ORDER HISTORY": "Lịch sử đặt hàng",
     "ORDER NUMBER": "Số đơn hàng",
