--- a/AngularShop/src/assets/i18n/zh.json
+++ b/AngularShop/src/assets/i18n/zh.json
@@ -15,8 +15,8 @@
     "CATEGORIES": "分类",
     "PRODUCT CATEGORY": "产品分类",
     "PRODUCT SUBCATEGORY": "产品子分类",
-	"SHOP DESCRIPTION0": "SHOP DESCRIPTION0",
-    "SHOP DESCRIPTION1": "SHOP DESCRIPTION1",
+	"SHOP DESCRIPTION0": "欢迎来到我们在瑞士的亚洲店",
+    "SHOP DESCRIPTION1": "我们提供来自亚洲各地，包括日本、中国、韩国、泰国等的各种产品。我们的货架上摆放着地道、高质量的食材、零食和饮料，让您仿佛置身于亚洲繁华的街道和热闹的市场。<br><br>无论您是寻找异国风味的香料、新鲜的蔬菜，还是独特的零食，我们都有适合您的产品。我们的员工友好、热情，愿意帮助您找到您需要的东西，并回答您的任何问题。我们还提供一些烹饪书籍和菜谱，为您的美食探险提供灵感。<br><br>除了食品产品，我们还提供一系列从亚洲灵感得来的生活用品和礼品，包括餐具、装饰品和美容产品。来探索我们的店铺，发现亚洲最美妙的事物在瑞士就在您身边。<br><br>欢迎来访，体验亚洲的风景、气味和味道",
     "DISCOVER MORE": "了解更多",
     "ORDER HISTORY": "订单历史",
     "ORDER NUMBER": "订单编号",
