--- a/AngularShop/src/assets/i18n/en.json
+++ b/AngularShop/src/assets/i18n/en.json
@@ -3,8 +3,8 @@
     "RESTAURANT": "Restaurant",
     "SHOP": "Shop",
     "CART": "Shopping Cart",
-    "LOGIN": "Log In",
-    "LOGOUT": "Log Out",
+    "LOGIN": "Login",
+    "LOGOUT": "Logout",
     "PROFILE": "Profile",
 	"ADMIN": "Admin",
     "SEARCH": "Search",
@@ -15,9 +15,7 @@
     "CATEGORIES": "Categories",
     "PRODUCT CATEGORY": "Product Category",
     "PRODUCT SUBCATEGORY": "Product Subcategory",
-	"SHOP DESCRIPTION0": "Welcome to our Asian shop",
-    "SHOP DESCRIPTION1": "We offer a wide variety of products from all over Asia, including Japan, China, Korea, Thailand, and more. Our shelves are stocked with authentic and high-quality ingredients, snacks, and beverages that will transport you to the bustling streets and vibrant markets of Asia.<br><br>Whether you're looking for exotic spices, fresh produce, or unique snacks, we have something for everyone. Our friendly and knowledgeable staff are always ready to help you find what you need and answer any questions you may have. We also offer a selection of cookbooks and recipe ideas to inspire your culinary adventures.<br><br>In addition to our food products, we also carry a range of Asian-inspired home goods and gifts, including tableware, decor, and beauty products. Explore our shop and discover the best of Asia right here in Switzerland.<br><br>Come visit us and experience the sights, smells, and tastes of Asia!",
-    "DISCOVER MORE": "Discover More",
+	"DISCOVER MORE": "Discover More",
     "ORDER HISTORY": "Order History",
     "ORDER NUMBER": "Order Number",
     "CREATION DATE": "Creation Date",
@@ -77,6 +75,9 @@
 	"STATE":"State",
 	"COUNTRY":"Country",
 	"SAME AS BILLING ADDRESS":"Same as billing address",
+    "ACCOUNT UPDATE":"Update Successful",
+    "ACCOUNT UPDATE TEXT":"Your account has been successfully updated!",
+    "ACCOUNT UPDATE ERROR" : "Account could not be updated. Please try again later.",
     "DELIVERY DATE": "Delivery Date",
     "COMMENT": "Comment",
     "MAXIMUM CHARACTERS": "Maximum 1000 Characters",
@@ -92,11 +93,16 @@
     "STOCK": "Stock",
     "PRICE PER UNIT": "Price per Unit",
 	"PRICE":"price",
+    "UNIT PRICE": "Unit Price",
     "CHOOSE QUANTITY TYPE": "Choose Quantity Type",
     "UNIT": "Unit",
     "CARTON": "Carton",
     "ADD TO CART": "Add to Cart",
     "QUANTITY": "Quantity",
+    "QUANTITY REQUIRED" : "Quantity Required",
+    "QUANTITY REQUIRED TEXT" : "Please choose the quantity you wish to purchase",
+    "STOCK LIMIT EXCEED":"Stock Limit Exceeded",
+    "STOCK LIMIT EXCEED TEXT":"Please adjust the quantity to match our available stock or contact us for more information",
     "ADD TO FAVORITES": "Add to Favorites",
     "REMOVE FROM FAVORITES": "Remove from Favorites",
     "FAVORITES": "Favorites",
@@ -109,6 +115,8 @@
     "LOGIN WITH OAUTH": "Login with OAuth",
     "REGISTER": "Register",
     "REGISTER TO OAUTH": "Register with OAuth",
+    "PLEASE LOGIN":"Please login",
+    "PLEASE LOGIN TEXT":"You are not logged in. Please log in to continue.",
     "CURRENT USER": "Current User:",
     "WARNING": "Warning!",
     "REMOVE ITEM MESSAGE": "Are you sure you want to remove this item from your cart?",
@@ -126,5 +134,7 @@
     "SEARCH BY USERNAME": "Search by Username",
     "DARK MODE" : "Dark Mode",
     "COMPLETE PROFILE":"Please complete your profile details first",
-    "PROFILE UNFINISHED":"Profile unfinished"
+    "PROFILE UNFINISHED":"Profile unfinished",
+    "NOT AVAILABLE":"This product is currently not available",
+    "OUT OF STOCK" : "Out of Stock"
 }
