--- a/AngularShop/src/assets/i18n/fr.json
+++ b/AngularShop/src/assets/i18n/fr.json
@@ -15,9 +15,7 @@
     "CATEGORIES": "Catégories",
     "PRODUCT CATEGORY": "Catégorie de Produits",
     "PRODUCT SUBCATEGORY": "Sous-catégorie de Produits",
-	"SHOP DESCRIPTION0": "Bienvenue dans notre magasin asiatique!",
-    "SHOP DESCRIPTION1": "Nous offrons une grande variété de produits de toute l'Asie, y compris le Japon, la Chine, la Corée, la Thaïlande et plus encore. Nos étagères sont remplies d'ingrédients, de collations et de boissons authentiques et de haute qualité qui vous transporteront dans les rues animées et les marchés vibrants d'Asie.<br><br>Que vous cherchiez des épices exotiques, des produits frais ou des collations uniques, nous avons quelque chose pour tout le monde. Notre personnel amical et compétent est toujours prêt à vous aider à trouver ce dont vous avez besoin et à répondre à toutes vos questions. Nous proposons également une sélection de livres de cuisine et d'idées de recettes pour inspirer vos aventures culinaires.<br><br>En plus de nos produits alimentaires, nous proposons également une gamme d'articles ménagers et de cadeaux inspirés de l'Asie, notamment de la vaisselle, de la décoration et des produits de beauté. Explorez notre magasin et découvrez le meilleur de l'Asie ici en Suisse.<br><br>Venez nous rendre visite et découvrez les sights, les odeurs et les goûts de l'Asie!",
-    "DISCOVER MORE": "Découvrir Plus",
+	"DISCOVER MORE": "Découvrir Plus",
     "ORDER HISTORY": "Historique des Commandes",
     "ORDER NUMBER": "Numéro de Commande",
     "CREATION DATE": "Date de Création",
@@ -77,6 +75,9 @@
 	"STATE": "État",
 	"COUNTRY": "Pays",
 	"SAME AS BILLING ADDRESS": "Identique à l'adresse de facturation",
+    "ACCOUNT UPDATE":"Mise à jour réussie",
+    "ACCOUNT UPDATE TEXT":"Votre compte a été mis à jour avec succès!",
+    "ACCOUNT UPDATE ERROR" : "Le compte n'a pas pu être mis à jour. Veuillez réessayer plus tard.",
     "DELIVERY DATE": "Date de Livraison",
     "COMMENT": "Commentaire",
     "MAXIMUM CHARACTERS": "Maximum 1000 Caractères",
@@ -92,11 +93,16 @@
     "STOCK": "Stock",
     "PRICE PER UNIT": "Prix par Unité",
 	"PRICE": "Prix",
+    "UNIT PRICE": "Prix à l'unité",
     "CHOOSE QUANTITY TYPE": "Choisissez le Type de Quantité",
     "UNIT": "Unité",
     "CARTON": "Carton",
     "ADD TO CART": "Ajouter au Panier",
     "QUANTITY": "Quantité",
+    "QUANTITY REQUIRED" : "Quantité requise",
+    "QUANTITY REQUIRED TEXT" : "Veuillez choisir la quantité que vous souhaitez acheter",
+    "STOCK LIMIT EXCEED":"Limite de stock dépassée",
+    "STOCK LIMIT EXCEED TEXT":"Veuillez ajuster la quantité pour correspondre à notre stock disponible ou contactez-nous pour plus d'informations.",
     "ADD TO FAVORITES": "Ajouter aux Favoris",
     "REMOVE FROM FAVORITES": "Retirer des Favoris",
     "FAVORITES": "Favoris",
@@ -109,6 +115,8 @@
     "LOGIN WITH OAUTH": "Connexion avec OAuth",
     "REGISTER": "S'Inscrire",
     "REGISTER TO OAUTH": "S'Inscrire avec OAuth",
+    "PLEASE LOGIN":"Veuillez vous connecter",
+    "PLEASE LOGIN TEXT":"Vous n'êtes pas connecté. Veuillez vous connecter pour continuer.",
     "CURRENT USER": "Utilisateur Actuel :",
     "WARNING": "Avertissement !",
     "REMOVE ITEM MESSAGE": "Êtes-vous sûr de vouloir supprimer cet article de votre panier ?",
@@ -126,5 +134,7 @@
     "SEARCH BY USERNAME": "Rechercher par Nom d'Utilisateur",
     "DARK MODE" : "Mode Sombre",
     "COMPLETE PROFILE":"Veuillez compléter vos détails de profil en premier",
-    "PROFILE UNFINISHED": "Profil inachevé"
+    "PROFILE UNFINISHED": "Profil inachevé",
+    "NOT AVAILABLE":"Ce produit n'est actuellement pas disponible.",
+    "OUT OF STOCK" : "Indisponible"
 }
