--- a/AngularShop/src/assets/i18n/vn.json
+++ b/AngularShop/src/assets/i18n/vn.json
@@ -15,9 +15,7 @@
     "CATEGORIES": "Danh mục",
     "PRODUCT CATEGORY": "Danh mục sản phẩm",
     "PRODUCT SUBCATEGORY": "Danh mục con sản phẩm",
-	"SHOP DESCRIPTION0": "Chào mừng đến với cửa hàng Á Châu của chúng tôi tại Thụy Sĩ!",
-    "SHOP DESCRIPTION1": "Chúng tôi cung cấp một loạt các sản phẩm từ khắp châu Á, bao gồm Nhật Bản, Trung Quốc, Hàn Quốc, Thái Lan và nhiều hơn nữa. Kệ hàng của chúng tôi được cung cấp đầy đủ các thành phần, đồ ăn nhẹ và đồ uống chất lượng cao và độc đáo sẽ đưa bạn đến những con phố sầm uất và các chợ sôi động của châu Á.<br><br>Dù bạn đang tìm kiếm gia vị kỳ lạ, rau củ tươi hoặc các loại bánh ngọt độc đáo, chúng tôi đều có sản phẩm phù hợp với mọi sở thích của bạn. Đội ngũ nhân viên của chúng tôi thân thiện và am hiểu sẵn sàng giúp bạn tìm thấy những gì bạn cần và trả lời bất kỳ câu hỏi nào của bạn. Chúng tôi cũng cung cấp một số sách nấu ăn và ý tưởng món ăn để truyền cảm hứng cho các chuyến phiêu lưu ẩm thực của bạn.<br><br>Ngoài các sản phẩm thực phẩm, chúng tôi cũng cung cấp một loạt các sản phẩm gia dụng và quà tặng lấy cảm hứng từ châu Á, bao gồm đồ dùng bàn ăn, trang trí và sản phẩm làm đẹp. Khám phá cửa hàng của chúng tôi và khám phá những điều tuyệt vời nhất của châu Á ngay tại Thụy Sĩ.<br><br>Hãy đến thăm chúng tôi và trải nghiệm những cảnh quan, mùi hương và hương vị của châu Á!",
-    "DISCOVER MORE": "Khám phá thêm",
+	"DISCOVER MORE": "Khám phá thêm",
     "ORDER HISTORY": "Lịch sử đặt hàng",
     "ORDER NUMBER": "Số đơn hàng",
     "CREATION DATE": "Ngày tạo",
@@ -77,6 +75,9 @@
 	"STATE": "Tiểu bang",
 	"COUNTRY": "Quốc gia",
 	"SAME AS BILLING ADDRESS": "Giống như địa chỉ thanh toán",
+    "ACCOUNT UPDATE":"Cập nhật thành công",
+    "ACCOUNT UPDATE TEXT":"Tài khoản của bạn đã được cập nhật thành công!",
+    "ACCOUNT UPDATE ERROR" : "Không thể cập nhật tài khoản. Vui lòng thử lại sau.",
     "DELIVERY DATE": "Ngày giao hàng",
     "COMMENT": "Bình luận",
     "MAXIMUM CHARACTERS": "Tối đa 1000 ký tự",
@@ -92,11 +93,16 @@
     "STOCK": "Tồn kho",
     "PRICE PER UNIT": "Giá mỗi đơn vị",
 	"PRICE": "Giá",
+    "UNIT PRICE": "Giá mỗi đơn vị",
     "CHOOSE QUANTITY TYPE": "Chọn loại số lượng",
     "UNIT": "Đơn vị",
     "CARTON": "Thùng",
     "ADD TO CART": "Thêm vào giỏ hàng",
     "QUANTITY": "Số lượng",
+    "QUANTITY REQUIRED" : "Yêu cầu số lượng",
+    "QUANTITY REQUIRED TEXT" : "Vui lòng chọn số lượng bạn muốn mua",
+    "STOCK LIMIT EXCEED":"Vượt quá giới hạn tồn kho",
+    "STOCK LIMIT EXCEED TEXT":"Vui lòng điều chỉnh số lượng cho phù hợp với tồn kho có sẵn của chúng tôi hoặc liên hệ với chúng tôi để biết thêm thông tin",
     "ADD TO FAVORITES": "Thêm vào mục yêu thích",
     "REMOVE FROM FAVORITES": "Xóa khỏi mục yêu thích",
     "FAVORITES": "Mục yêu thích",
@@ -109,6 +115,8 @@
     "LOGIN WITH OAUTH": "Đăng nhập bằng OAuth",
     "REGISTER": "Đăng ký",
     "REGISTER TO OAUTH": "Đăng ký bằng OAuth",
+    "PLEASE LOGIN":"Vui lòng đăng nhập",
+    "PLEASE LOGIN TEXT":"Bạn chưa đăng nhập. Vui lòng đăng nhập để tiếp tục.",
     "CURRENT USER": "Người dùng hiện tại:",
     "WARNING": "Cảnh báo!",
     "REMOVE ITEM MESSAGE": "Bạn có chắc chắn muốn loại bỏ mặt hàng này khỏi giỏ hàng của bạn không?",
@@ -126,5 +134,7 @@
     "SEARCH BY USERNAME": "Tìm kiếm theo tên người dùng",
     "DARK MODE" : "Chế độ tối",
     "COMPLETE PROFILE": "Vui lòng hoàn thiện thông tin hồ sơ của bạn trước",
-    "PROFILE UNFINISHED": "Hồ sơ chưa hoàn thành"
+    "PROFILE UNFINISHED": "Hồ sơ chưa hoàn thành",
+    "NOT AVAILABLE":"Sản phẩm này hiện không có sẵn.",
+    "OUT OF STOCK" : "Hết hàng"
 }
