--- a/AngularShop/src/assets/i18n/zh.json
+++ b/AngularShop/src/assets/i18n/zh.json
@@ -15,9 +15,7 @@
     "CATEGORIES": "分类",
     "PRODUCT CATEGORY": "产品分类",
     "PRODUCT SUBCATEGORY": "产品子分类",
-	"SHOP DESCRIPTION0": "欢迎来到我们在瑞士的亚洲店",
-    "SHOP DESCRIPTION1": "我们提供来自亚洲各地，包括日本、中国、韩国、泰国等的各种产品。我们的货架上摆放着地道、高质量的食材、零食和饮料，让您仿佛置身于亚洲繁华的街道和热闹的市场。<br><br>无论您是寻找异国风味的香料、新鲜的蔬菜，还是独特的零食，我们都有适合您的产品。我们的员工友好、热情，愿意帮助您找到您需要的东西，并回答您的任何问题。我们还提供一些烹饪书籍和菜谱，为您的美食探险提供灵感。<br><br>除了食品产品，我们还提供一系列从亚洲灵感得来的生活用品和礼品，包括餐具、装饰品和美容产品。来探索我们的店铺，发现亚洲最美妙的事物在瑞士就在您身边。<br><br>欢迎来访，体验亚洲的风景、气味和味道",
-    "DISCOVER MORE": "了解更多",
+	"DISCOVER MORE": "了解更多",
     "ORDER HISTORY": "订单历史",
     "ORDER NUMBER": "订单编号",
     "CREATION DATE": "创建日期",
@@ -77,6 +75,9 @@
 	"STATE": "州",
 	"COUNTRY": "国家",
 	"SAME AS BILLING ADDRESS": "与账单地址相同",
+    "ACCOUNT UPDATE":"更新成功",
+    "ACCOUNT UPDATE TEXT":"您的账户已成功更新！",
+    "ACCOUNT UPDATE ERROR" : "账户无法更新。请稍后再试。",
     "DELIVERY DATE": "送货日期",
     "COMMENT": "备注",
     "MAXIMUM CHARACTERS": "最多1000个字符",
@@ -92,13 +93,18 @@
     "STOCK": "库存",
     "PRICE PER UNIT": "单位价格",
 	"PRICE": "价格",
+    "UNIT PRICE": "单价",
     "CHOOSE QUANTITY TYPE": "选择数量类型",
     "UNIT": "单元",
     "CARTON": "纸箱",
     "ADD TO CART": "加入购物车",
     "QUANTITY": "数量",
+    "QUANTITY REQUIRED" : "需要数量",
+    "QUANTITY REQUIRED TEXT" : "请选择您要购买的数量",
     "ADD TO FAVOURITES": "添加到收藏夹",
     "REMOVE FROM FAVOURITES": "从收藏夹中移除",
+    "STOCK LIMIT EXCEED":"超出库存限制",
+    "STOCK LIMIT EXCEED TEXT":"请调整数量以匹配我们的可用库存，或联系我们获取更多信息",
     "FAVOURITES": "收藏夹",
     "PRODUCT DETAILS": "产品详情",
     "FILTERS": "筛选",
@@ -109,6 +115,8 @@
     "LOGIN WITH OAUTH": "使用OAuth登录",
     "REGISTER": "注册",
     "REGISTER TO OAUTH": "使用OAuth注册",
+    "PLEASE LOGIN":"请登录",
+    "PLEASE LOGIN TEXT":"您尚未登录。请登录以继续。",
     "CURRENT USER": "当前用户：",
     "WARNING": "警告！",
     "REMOVE ITEM MESSAGE": "您确定要从购物车中移除此项吗？",
@@ -126,5 +134,7 @@
     "SEARCH BY USERNAME": "按用户名搜索",
     "DARK MODE" : "暗模式",
     "COMPLETE PROFILE": "请先完成您的个人资料",
-    "PROFILE UNFINISHED": "个人资料未完成"
+    "PROFILE UNFINISHED": "个人资料未完成",
+    "NOT AVAILABLE":"该产品目前不可用。",
+    "OUT OF STOCK" : "缺货"
 }
