--- a/AngularShop/src/assets/i18n/de.json
+++ b/AngularShop/src/assets/i18n/de.json
@@ -15,8 +15,6 @@
     "CATEGORIES": "Kategorien",
     "PRODUCT CATEGORY": "Warenkategorie",
     "PRODUCT SUBCATEGORY": "Unterkategorie",
-    "SHOP DESCRIPTION0": "Willkommen in unserem asiatischen Geschäft!",
-    "SHOP DESCRIPTION1": "Wir bieten eine breite Auswahl an Produkten aus ganz Asien, darunter Japan, China, Korea, Thailand und mehr. Unsere Regale sind mit authentischen und hochwertigen Zutaten, Snacks und Getränken gefüllt, die Sie auf die belebten Strassen und lebendigen Märkte Asiens bringen werden.<br><br>Ob Sie exotische Gewürze, frisches Gemüse oder einzigartige Snacks suchen, wir haben für jeden etwas dabei. Unsere freundlichen und sachkundigen Mitarbeiter sind immer bereit, Ihnen bei der Suche nach dem Gewünschten zu helfen und alle Fragen zu beantworten, die Sie haben. Wir bieten auch eine Auswahl an Kochbüchern und Rezeptideen, um Ihre kulinarischen Abenteuer zu inspirieren.<br><br>Neben unseren Lebensmittelprodukten führen wir auch eine Reihe von asiatisch inspirierten Haushaltswaren und Geschenken, darunter Geschirr, Dekor und Schönheitsprodukte. Entdecken Sie unseren Laden und erleben Sie das Beste aus Asien direkt hier in der Schweiz.<br><br>Besuchen Sie uns und erleben Sie die Sehenswürdigkeiten, Gerüche und Geschmacksrichtungen Asiens!",
     "DISCOVER MORE": "Mehr entdecken",
     "ORDER HISTORY": "Bestellverlauf",
     "ORDER NUMBER": "Bestellnummer",
@@ -45,7 +43,7 @@
     "SUNDAY": "Sonntag",
     "CLOSED": "Geschlossen",
     "SHOPPING CART": "Warenkorb",
-    "PRICE VARIATION MESSAGE": "Bitte beachten Sie, dass der angegebene Preis nur ein ungefährer Wert ist und der tatsächliche Preis variieren kann.",
+    "PRICE VARIATION MESSAGE": "Bitte beachten: Der angegebene Preis ist eine Schätzung und kann variieren.",
     "APPRECIATION MESSAGE": "Wir schätzen Ihre Unterstützung.",
     "THANK YOU": "Danke!",
     "CART TOTALS": "Warenkorbsumme",
@@ -77,6 +75,9 @@
 	"STATE": "Ort",
 	"COUNTRY": "Land",
 	"SAME AS BILLING ADDRESS": "Gleich wie Rechnungsadresse",
+    "ACCOUNT UPDATE":"Aktualisierung erfolgreich",
+    "ACCOUNT UPDATE TEXT":"Ihr Konto wurde erfolgreich aktualisiert!",
+    "ACCOUNT UPDATE ERROR" : "Konto konnte nicht aktualisiert werden. Bitte versuchen Sie es später noch einmal.",
     "DELIVERY DATE": "Lieferdatum",
     "COMMENT": "Kommentar",
     "MAXIMUM CHARACTERS": "Maximal 1000 Zeichen",
@@ -92,11 +93,16 @@
     "STOCK": "Lagerbestand",
     "PRICE PER UNIT": "Preis pro Einheit",
 	"PRICE":"Preis",
+    "UNIT PRICE": "Einzelpreis",
     "CHOOSE QUANTITY TYPE": "Wählen Sie den Mengentyp",
     "UNIT": "Stück",
     "CARTON": "Karton",
     "ADD TO CART": "In den Warenkorb",
     "QUANTITY": "Menge",
+    "QUANTITY REQUIRED" : "Menge erforderlich",
+    "QUANTITY REQUIRED TEXT" : "Bitte wählen Sie die Menge, die Sie kaufen möchten",
+    "STOCK LIMIT EXCEED":"Lagerbestand überschritten",
+    "STOCK LIMIT EXCEED TEXT":"Bitte passen Sie die Menge an unseren verfügbaren Bestand an oder kontaktieren Sie uns für weitere Informationen.",
     "ADD TO FAVOURITES": "Zu Favoriten hinzufügen",
     "REMOVE FROM FAVOURITES": "Aus Favoriten entfernen",
     "FAVOURITES": "Favoriten",
@@ -109,6 +115,8 @@
     "LOGIN WITH OAUTH": "Login",
     "REGISTER": "Registrieren",
     "REGISTER TO OAUTH": "Registrieren",
+    "PLEASE LOGIN":"Bitte einloggen",
+    "PLEASE LOGIN TEXT":"Sie sind nicht eingeloggt. Bitte loggen Sie sich ein, um fortzufahren.",
     "CURRENT USER": "Aktueller Benutzer:",
     "WARNING": "Warnung!",
     "REMOVE ITEM MESSAGE": "Sind Sie sicher, dass Sie diesen Artikel aus Ihrem Warenkorb entfernen möchten?",
@@ -126,5 +134,7 @@
     "SEARCH BY USERNAME": "Suche nach Benutzername",
     "DARK MODE" : "Nachtmodus",
     "COMPLETE PROFILE":"Bitte vervollständigen Sie zuerst Ihre Profildetails",
-    "PROFILE UNFINISHED": "Unvollständiges Profil"
+    "PROFILE UNFINISHED": "Unvollständiges Profil",
+    "NOT AVAILABLE":"Dieses Produkt ist derzeit nicht verfügbar.",
+    "OUT OF STOCK" : "Nicht verfügbar"
 }
